# SL-Ham-Radio-Log

./: README.md  main.py  pyproject.toml  requirements.txt
config/: config.ini  setup_config.py
database/: radio_log.db  setup_db.py
helpers/: bands.py  clear_handler.py  colors.py  current_date.py  error_handler.py  exit_handler.py  get_today_or_yesterday.py  greet_user.py  modulations.py  options.py
modules/: about.py  name_changer.py  qso.py  stats.py  top.py  top_callsign.py
