[tool.poetry]
name = "sl-ham-radio-log"
version = "0.1.0"
description = "SuckLess Ham Radio Log"
authors = ["Filip Laszczak"]
license = "MIT"
readme = "README.md"
packages = [{include = "sl_ham_radio_log"}]

[tool.poetry.dependencies]
python = "^3.10"
rich = "^13.2.0"
configparser = "^5.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
